<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.csandiego.timesup.editor.PresetEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/edit_text_preset_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <NumberPicker
            android:id="@+id/numberPickerHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@={viewModel.hours}"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView11"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/materialTextView11" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
            app:layout_constraintEnd_toStartOf="@+id/numberPickerMinutes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/numberPickerHours"
            app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

        <NumberPicker
            android:id="@+id/numberPickerMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@={viewModel.minutes}"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView12"
            app:layout_constraintEnd_toStartOf="@+id/materialTextView12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialTextView11"
            app:layout_constraintTop_toTopOf="@+id/materialTextView12" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@+id/numberPickerSeconds"
            app:layout_constraintEnd_toStartOf="@+id/numberPickerSeconds"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
            app:layout_constraintTop_toTopOf="@+id/numberPickerSeconds" />

        <NumberPicker
            android:id="@+id/numberPickerSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:value="@={viewModel.seconds}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialTextView12"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
