<resources>
    <string name="app_name">TimesUp</string>
    <string name="editor_edit_title">Edit Preset</string>
    <string name="editor_new_title">New Preset</string>
    <string name="button_save">Save</string>
    <string name="edit_text_preset_name_hint">Name (e.g. Brew Coffee, Soft-boiled Eggs, etc.)</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="preset_empty_message">Click the Add button to create a new preset.</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_reset">Reset</string>
    <string name="timer_title">Timer</string>
    <string name="high_importance_notification_channel_name">High</string>
    <string name="high_importance_notification_channel_description">High importance</string>
    <string name="low_importance_notification_channel_name">Low</string>
    <string name="low_importance_notification_channel_description">Low importance</string>
</resources>
