package com.github.csandiego.timesup

import android.content.Context
import android.os.Bundle
import android.widget.Button
import androidx.arch.core.executor.testing.InstantTaskExecutorRule
import androidx.fragment.app.testing.FragmentScenario
import androidx.fragment.app.testing.launchFragment
import androidx.lifecycle.ViewModel
import androidx.lifecycle.ViewModelProvider
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.github.csandiego.timesup.data.TestData.presetsSortedByName
import com.github.csandiego.timesup.editor.EditPresetFragment
import com.github.csandiego.timesup.editor.PresetEditorViewModel
import com.github.csandiego.timesup.junit.RoomDatabaseRule
import com.github.csandiego.timesup.repository.DefaultPresetRepository
import com.github.csandiego.timesup.room.TimesUpDatabase
import com.google.common.truth.Truth.assertThat
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.test.TestCoroutineScope
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.endsWith
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@ExperimentalCoroutinesApi
@RunWith(AndroidJUnit4::class)
class EditPresetTest {

    private val preset = presetsSortedByName[0]

    private lateinit var repository: DefaultPresetRepository
    private lateinit var viewModel: PresetEditorViewModel
    private lateinit var scenario: FragmentScenario<EditPresetFragment>

    @get:Rule
    val instantTaskExecutorRule = InstantTaskExecutorRule()

    @get:Rule
    val roomDatabaseRule = RoomDatabaseRule(
        ApplicationProvider.getApplicationContext<Context>(),
        TimesUpDatabase::class
    )

    @Before
    fun setUp() {
        val dao = roomDatabaseRule.database.presetDao().apply {
            runBlockingTest {
                insert(preset)
            }
        }
        repository = DefaultPresetRepository(dao, TestCoroutineScope())
        viewModel = PresetEditorViewModel(repository)
        val viewModelFactory = object : ViewModelProvider.Factory {
            @Suppress("UNCHECKED_CAST")
            override fun <T : ViewModel> create(modelClass: Class<T>): T {
                return viewModel as T
            }
        }
        scenario = launchFragment(
            Bundle().apply {
                putLong("presetId", preset.id)
            },
            R.style.Theme_TimesUp
        ) {
            EditPresetFragment(viewModelFactory)
        }
    }

//    @Test
//    fun whenNameAndDurationEnteredThenBindIntoViewModel() {
//        onView(withId(R.id.editTextName))
//            .perform(
//                replaceText(preset.name),
//                closeSoftKeyboard()
//            )
//        onView(withId(R.id.numberPickerHours))
//            .perform(longClick())
//        onView(
//            allOf(
//                withParent(withId(R.id.numberPickerHours)),
//                withClassName(endsWith("CustomEditText"))
//            )
//        ).perform(
//            replaceText(preset.hours.toString()),
//            closeSoftKeyboard()
//        )
//        onView(withId(R.id.numberPickerMinutes))
//            .perform(longClick())
//        onView(
//            allOf(
//                withParent(withId(R.id.numberPickerMinutes)),
//                withClassName(endsWith("CustomEditText"))
//            )
//        ).perform(
//            replaceText(preset.minutes.toString()),
//            closeSoftKeyboard()
//        )
//        onView(withId(R.id.numberPickerSeconds))
//            .perform(longClick())
//        onView(
//            allOf(
//                withParent(withId(R.id.numberPickerSeconds)),
//                withClassName(endsWith("CustomEditText"))
//            )
//        ).perform(
//            replaceText(preset.seconds.toString()),
//            closeSoftKeyboard()
//        )
//        with(viewModel) {
//            assertThat(name.value).isEqualTo(preset.name)
//            assertThat(hours.value).isEqualTo(preset.hours)
//            assertThat(minutes.value).isEqualTo(preset.minutes)
//            assertThat(seconds.value).isEqualTo(preset.seconds)
//        }
//    }

    @Test
    fun givenPositiveButtonEnabledWhenClickedThenSave() {
        onView(withId(R.id.editTextName))
            .perform(
                replaceText(preset.name),
                closeSoftKeyboard()
            )
        onView(withId(R.id.numberPickerHours))
            .perform(longClick())
        onView(
            allOf(
                withParent(withId(R.id.numberPickerHours)),
                withClassName(endsWith("CustomEditText"))
            )
        ).perform(
            replaceText(preset.hours.toString()),
            closeSoftKeyboard()
        )
        onView(withId(R.id.numberPickerMinutes))
            .perform(longClick())
        onView(
            allOf(
                withParent(withId(R.id.numberPickerMinutes)),
                withClassName(endsWith("CustomEditText"))
            )
        ).perform(
            replaceText(preset.minutes.toString()),
            closeSoftKeyboard()
        )
        onView(withId(R.id.numberPickerSeconds))
            .perform(longClick())
        onView(
            allOf(
                withParent(withId(R.id.numberPickerSeconds)),
                withClassName(endsWith("CustomEditText"))
            )
        ).perform(
            replaceText(preset.seconds.toString()),
            closeSoftKeyboard()
        )
        onView(
            allOf(
                isAssignableFrom(Button::class.java),
                withText(R.string.button_save)
            )
        ).perform(click())
        runBlockingTest {
            assertThat(repository.get(preset.id)).isEqualTo(preset)
        }
    }
}